# quick-help

./: CLAUDE.md  LICENSE  README.md  meson.build
src/: ai.c  ai.h  ai_search_tool.c  ai_search_tool.h  ai_web_tool.c  ai_web_tool.h  config.c  config.h  detect.c  detect.h  input.c  main.c  markdown.c  markdown.h  system_context.c  system_context.h  window.c  window.h  window_context.c  window_context.h  window_internal.h
src/utils/: html.c  html.h
